Upgrade Gradle to 7.4.2